--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-__pycache__/
+csort.c
 build/
+csort.cp39-win_amd64.pyd
 hello.c
 hello.cp39-win_amd64.pyd
-test.py
-csort.c
-csort.cp39-win_amd64.pyd
+hello.pyx
